--- a/client/app/views/planestudiodetalles/list.html
+++ b/client/app/views/planestudiodetalles/list.html
@@ -29,7 +29,7 @@
                 <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
               </td>
               <td class="text-left" data-title="'Curso'" sortable="curso">{{item._curso.nombre}}</td>
-              <td data-title="'Código'" sortable="codigo" filter="{ 'codigo': 'text' }">{{item._curso.codigo}}</td>
+              <td data-title="'Código'" sortable="codigo" filter="{ 'codigo': 'text' }">{{item.codigo}}</td>
               <td data-title="'N° Creditos'">{{item.creditos}}</td>
               <td data-title="'N° Horas'">{{item.horas_total}}</td>
               <td data-title="'N° Horas Teoria'">{{item.horas_teoria}}</td>
@@ -94,7 +94,7 @@
 </md-fab-speed-dial>
 
 <md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right" >
-  
+
   <md-content layout="column" ng-include="'views/planestudiodetalles/comentarios.html'"  layout-fill>
 
 </md-content>
