--- a/client/app/views/equivalencias/list.html
+++ b/client/app/views/equivalencias/list.html
@@ -63,7 +63,7 @@
                 <td style="width:30px;">
                   <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
                 </td>
-                <td class="text-left" data-title="'Curso'" sortable="curso">{{item._curso.nombre}}</td>
+                <td class="text-left" data-title="'Plan Estudios'" sortable="curso">{{item._curso.nombre}}</td>
 
               </tr>
 
@@ -97,11 +97,11 @@
 
                 </tr>
 
-                <tr ng-hide="group.$hideRows" ng-repeat="item in group.data" ng-click="item.active=!item.active;EnabledEdit(item,$groups)">
+                <tr ng-hide="group.$hideRows" ng-repeat="item in group.data" ng-click="item.active=!item.active;Equivalencia(item,$groups)">
                   <td style="width:30px;">
                     <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
                   </td>
-                  <td class="text-left" data-title="'Curso'" sortable="curso">{{item._curso.nombre}}</td>
+                  <td class="text-left" data-title="'Plan de Estudios Equivalente'" sortable="curso">{{item._curso.nombre}}</td>
 
                 </tr>
 
@@ -115,20 +115,3 @@
     </md-content>
   </div>
 </md-content>
-
-<md-fab-speed-dial ng-if="!UI.editMode&&UI.planestudios.estado=='Pendiente'" md-open="false" md-direction="up" class="md-fling md-fab-bottom-right">
-  <!--md-fab-trigger>
-   <md-button aria-label="menu" class="md-fab md-accent">
-     <md-tooltip md-direction="left">Opciones de Aprobación Plan de Estudios</md-tooltip>
-     <md-icon md-font-icon="fa fa-bars fa-lg tc-white"></md-icon>
-   </md-button>
- </md-fab-trigger-->
-</md-fab-speed-dial>
-
-
-<md-button ng-if="UI.editMode" ng-click="AprobarCurso($event)" class="md-fab md-fab-bottom-right">
-  <md-tooltip md-direction="left" ng-if="UI.selected._aprobacionesPeriodo.length==0">Marcar como Dictado</md-tooltip>
-  <md-tooltip md-direction="left" ng-if="UI.selected._aprobacionesPeriodo.length>0">Marcar como no Dictado</md-tooltip>
-  <md-icon md-font-icon="fa fa-thumbs-o-down fa-lg tc-white" ng-if="UI.selected._aprobacionesPeriodo.length>0"></md-icon>
-  <md-icon md-font-icon="fa fa-thumbs-o-up fa-lg tc-white" ng-if="UI.selected._aprobacionesPeriodo.length===0"></md-icon>
-</md-button>
