Registro de Ingresantes

--- a/client/app/views/alumnos/form.html
+++ b/client/app/views/alumnos/form.html
@@ -131,7 +131,7 @@
       </md-tab>
 
       <md-tab label="Otros datos">
-        <md-content class="md-padding">
+        <md-content class="md-padding window-modal-content-sm">
 
           <div  flex-container="row" flex-gutter="24">
             <div flex-item>
