--- a/client/app/views/ingresantes/list.html
+++ b/client/app/views/ingresantes/list.html
@@ -14,9 +14,10 @@
             <td style="width:30px;">
               <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-pink-500':item.active}"></span>
             </td>
-            <td class="text-left" data-title="'Código'" sortable="codigo" filter="{'codigo':'text'}">{{item.codigo}}</td>
+            <td class="text-left" data-title="'Código'" sortable="codigoPostulante" filter="{'codigoPostulante':'text'}">{{item.codigoPostulante}}</td>
             <td class="text-left" data-title="'Nombres'" sortable="nombres" filter="{'nombres':'text'}">{{item.nombres}}</td>
-            <td class="text-left" data-title="'Apellidos'" sortable="apellidos" filter="{'apellidos':'text'}">{{item.apellidos}}</td>
+            <td class="text-left" data-title="'Apellido Paterno'" sortable="apellidoPaterno" filter="{'apellidoPaterno':'text'}">{{item.apellidoPaterno}}</td>
+            <td class="text-left" data-title="'Apellido Materno'" sortable="apellidoMaterno" filter="{'apellidoMaterno':'text'}">{{item.apellidoMaterno}}</td>
             <td class="text-left" data-title="'Sexo'" sortable="sexo" filter="{'sexo':'text'}">{{item.sexo}}</td>
           </tr>
         </tbody>
@@ -41,21 +42,21 @@
    <!--custom actions: Se agregan en el controlador solo cuando es necesario considerar mas opciones para cada elemento de la lista-->
    <md-button ng-repeat="action in UI.customActions" aria-label="{{action.label}}" class="md-fab md-raised md-mini" ng-click="action.onclick($event)">
      <md-tooltip md-direction="left">{{action.label}}</md-tooltip>
-     <md-icon md-font-icon="fa fa-building fa-lg tc-pink-500" aria-label="{{action.label}}"></md-icon>
+     <md-icon md-font-icon="fa fa-building fa-lg tc-{{$root.color.accent}}-500" aria-label="{{action.label}}"></md-icon>
    </md-button>
    <!--end custom actions-->
    <!--default actions: Acciones por defecto que contendra cada interfaz de mantenimiento-->
    <md-button aria-label="{{UI.message.Buttons.New}}" class="md-fab md-raised md-mini" ng-click="New($event)">
      <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
-     <md-icon md-font-icon="fa fa-plus fa-lg tc-pink-500" aria-label="{{UI.message.Buttons.New}}"></md-icon>
+     <md-icon md-font-icon="fa fa-plus fa-lg tc-{{$root.color.accent}}-500" aria-label="{{UI.message.Buttons.New}}"></md-icon>
    </md-button>
    <md-button aria-label="{{UI.message.Buttons.Edit}}" class="md-fab md-raised md-mini" ng-click="Edit($event)">
      <md-tooltip md-direction="left">{{UI.message.Buttons.Edit}}</md-tooltip>
-     <md-icon md-font-icon="fa fa-pencil fa-lg tc-pink-500" aria-label="{{UI.message.Buttons.Edit}}"></md-icon>
+     <md-icon md-font-icon="fa fa-pencil fa-lg tc-{{$root.color.accent}}-500" aria-label="{{UI.message.Buttons.Edit}}"></md-icon>
    </md-button>
    <md-button aria-label="{{UI.message.Buttons.Delete}}" class="md-fab md-raised md-mini" ng-click="Delete($event)">
      <md-tooltip md-direction="left">{{UI.message.Buttons.Delete}}</md-tooltip>
-     <md-icon md-font-icon="fa fa-trash fa-lg tc-pink-500" aria-label="{{UI.message.Buttons.Delete}}"></md-icon>
+     <md-icon md-font-icon="fa fa-trash fa-lg tc-{{$root.color.accent}}-500" aria-label="{{UI.message.Buttons.Delete}}"></md-icon>
    </md-button>
    <!--end default actions-->
  </md-fab-actions>
