--- a/client/app/views/ingresantes/list.html
+++ b/client/app/views/ingresantes/list.html
@@ -35,7 +35,7 @@
 <md-fab-speed-dial ng-if="UI.editMode" md-open="false" md-direction="up" class="md-fling md-fab-bottom-right">
  <md-fab-trigger>
    <md-button aria-label="menu" class="md-fab">
-     <md-icon md-font-icon="fa fa-bars fa-lg tc-white"></md-icon>
+     <md-icon md-font-icon="fa fa-bars fa-lg tc-{{$root.color.accent}}"></md-icon>
    </md-button>
  </md-fab-trigger>
  <md-fab-actions>
