--- a/client/app/views/aprobacion/ingresantes/list.html
+++ b/client/app/views/aprobacion/ingresantes/list.html
@@ -46,7 +46,7 @@
           <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
           <tr ng-repeat="item in $data" ng-click="item.active=!item.active;EnabledEdit(item)" ng-class="{'table-selected-row bgc-teal-50':item.active}">
             <td style="width:30px;">
-              <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-pink-500':item.active}"></span>
+              <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
             </td>
             <td class="text-left" data-title="'Código'" sortable="codigoPostulante" filter="{'codigoPostulante':'text'}">{{item.codigoPostulante}}</td>
             <td class="text-left" data-title="'Nombres'" sortable="nombres" filter="{'nombres':'text'}">{{item.nombres}}</td>
@@ -60,10 +60,26 @@
   </div>
 </md-content>
 
+
 <!-- Button New: solo visible cuando ningun elemento de la lista ha sido seleccionado-->
 <md-button ng-if="!UI.editMode" ng-click="Approve($event)" class="md-fab md-fab-bottom-right" aria-label="{{UI.message.Buttons.New}}" >
-  <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
-  <md-icon md-font-icon="fa fa-plus fa-lg"></md-icon>
+  <md-tooltip md-direction="left">{{UI.message.Buttons.ApproveAll}}</md-tooltip>
+  <md-icon md-font-icon="fa fa-thumbs-up fa-lg tc-white"></md-icon>
 </md-button>
+<!--acciones: se mostraran al seleccionar un elemento del listado-->
+<md-fab-speed-dial ng-if="UI.editMode" md-open="false" md-direction="up" class="md-fling md-fab-bottom-right">
+ <md-fab-trigger>
+   <md-button aria-label="menu" class="md-fab">
+     <md-icon md-font-icon="fa fa-bars fa-lg tc-white"></md-icon>
+   </md-button>
+ </md-fab-trigger>
 
-<md-button class="md-raised md-warn" ng-click="Approve($event)">Aprobar</md-button>
+ <md-fab-actions>
+   <!--default actions: Acciones por defecto que contendra cada interfaz de mantenimiento-->
+   <md-button aria-label="{{UI.message.Buttons.New}}" class="md-fab md-raised md-mini" ng-click="Approve($event)">
+     <md-tooltip md-direction="left">{{UI.message.Buttons.Approve}}</md-tooltip>
+     <md-icon md-font-icon="fa fa-thumbs-o-up fa-lg tc-{{$root.color.accent}}-500" aria-label="{{UI.message.Buttons.New}}"></md-icon>
+   </md-button>
+   <!--end default actions-->
+ </md-fab-actions>
+</md-fab-speed-dial>
