Pago de Ingresante - Parte 1

--- a/client/app/views/ingresantes/pagos.html
+++ b/client/app/views/ingresantes/pagos.html
@@ -53,7 +53,7 @@
                 <td class="text-left" data-title="'Nombres'" sortable="nombres" filter="{'nombres':'text'}">{{item.nombres}}</td>
                 <td class="text-left" data-title="'Apellido Paterno'" sortable="apellidoPaterno" filter="{'apellidoPaterno':'text'}">{{item.apellidoPaterno}}</td>
                 <td class="text-left" data-title="'Apellido Materno'" sortable="apellidoMaterno" filter="{'apellidoMaterno':'text'}">{{item.apellidoMaterno}}</td>
-                <td class="text-left" data-title="'Sexo'" sortable="sexo" filter="{'sexo':'text'}">{{item.sexo}}</td>
+                <td class="text-left" data-title="'Estado'" sortable="estado" filter="{'estado':'select'}" filter-data="estados">{{item.estado}}</td>
               </tr>
             </tbody>
           </table>
