--- a/client/app/views/ingresantes/form_pagogrupo.html
+++ b/client/app/views/ingresantes/form_pagogrupo.html
@@ -16,6 +16,7 @@
           <md-input-container class="md-block">
             <label>Seleccionar Archivo</label>
             <input id="fileInput" name="file" type="file" class="ng-hide" multiple>
+            <md-button id="uploadButton" class="md-raised md-primary"> Choose Files </md-button>
             <div ng-messages="myForm.codigoPostulante.$error" ng-if="submited">
               <div ng-message="required">{{message.Required}}</div>
             </div>
