--- a/client/app/views/aprobacion/planestudios/detalle.html
+++ b/client/app/views/aprobacion/planestudios/detalle.html
@@ -34,7 +34,7 @@
         <md-content class="md-padding" layout-fill>
 
           <p ng-repeat="comentario in comentarios" class="md-padding">
-              <strong>{{comentario._user}}</strong> - <small>{{comentario.created_at|date:'dd/MM/yyyy @ h:mma'}}</small><br>
+              <strong>{{comentario._user}}</strong> - <small>{{comentario.createdAt|date:'dd/MM/yyyy @ h:mma'}}</small><br>
             {{comentario.comentario}}
             <md-divider></md-divider>
           </p>
