Mantenimiento de Secciones - Final

--- a/client/app/views/secciones/form.html
+++ b/client/app/views/secciones/form.html
@@ -33,22 +33,32 @@
             </div>
           </md-input-container>
         </div>
-        <div flex>
+        <div flex-item>
           <md-input-container class="md-block">
-            <label>Escuela</label>
-            <md-select ng-model="model._escuela" ng-model-options="{trackBy: '$value._id'}">
-              <md-option ng-repeat="esc in escuelas" ng-value="escuela">
-                {{esc.nombre}}
+            <label>Facultad</label>
+            <md-select ng-model="model._facultad"  ng-model-options="{trackBy: '$value._id'}" name="facultad" ng-change="LoadEscuelasFrm()">
+              <md-option ng-repeat="fac in facultades" ng-value="fac">
+                {{fac.nombre}}
               </md-option>
             </md-select>
-            <div ng-messages="myForm._periodoIngreso.$error" ng-if="submited">
+          </md-input-container>
+        </div>
+        <div flex-item>
+          <md-input-container class="md-block">
+            <label>Escuela</label>
+            <md-select ng-model="model._escuela" ng-model-options="{trackBy: '$value._id'}" name="escuela" required>
+              <md-option ng-repeat="escuela in escuelas" ng-value="escuela">
+                {{escuela.nombre}}
+              </md-option>
+            </md-select>
+            <div ng-messages="myForm._escuela.$error" ng-if="submited">
               <div ng-message="required">{{message.Required}}</div>
             </div>
           </md-input-container>
         </div>
       </div>
       <div flex layout="row" layout-sm="column">
-        <div flex="30" layout-align="start start" flex-sm="100" class="text-left">
+        <div flex="30" layout-align="start start" flex-sm="100" class="text-left" ng-if="includeActive">
           <md-checkbox ng-model="model.activo">
             Activo
           </md-checkbox>
